@@ -95,9 +95,9 @@ struct _AccountWindow
 
   /* These probably don't belong here anymore, but until we figure out
      what we want, we'll leave them alone. */
+  GtkWidget * get_quote_check;
   GtkWidget * source_menu;
   GtkWidget * quote_tz_menu;
-  GtkWidget * quote_frame;
 
   GtkWidget * tax_related_button;
 
@@ -150,9 +150,11 @@ gnc_account_to_ui(AccountWindow *aw)
     return;
 
   string = xaccAccountGetName (account);
+  if (string == NULL) string = "";
   gtk_entry_set_text(GTK_ENTRY(aw->name_entry), string);
 
   string = xaccAccountGetDescription (account);
+  if (string == NULL) string = "";
   gtk_entry_set_text(GTK_ENTRY(aw->description_entry), string);
 
   commodity = xaccAccountGetCurrency (account);
@@ -164,6 +166,7 @@ gnc_account_to_ui(AccountWindow *aw)
                                     commodity);
 
   string = xaccAccountGetCode (account);
+  if (string == NULL) string = "";
   gtk_entry_set_text(GTK_ENTRY(aw->code_entry), string);
 
   string = xaccAccountGetNotes (account);
@@ -183,7 +186,11 @@ gnc_account_to_ui(AccountWindow *aw)
   {
     /* we'll let GetPriceSrc handle the account type checking... */
     const char* price_src = xaccAccountGetPriceSrc (account);
-    if (price_src)
+
+    gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (aw->get_quote_check),
+                                  price_src != NULL);
+
+    if (price_src && aw->type != CURRENCY)
       gtk_option_menu_set_history (GTK_OPTION_MENU (aw->source_menu),
                                    gnc_get_source_code (price_src));
   }
@@ -303,13 +310,37 @@ gnc_ui_to_account(AccountWindow *aw)
 
   if ((STOCK == aw->type) || (MUTUAL == aw->type) || (CURRENCY == aw->type))
   {
+    gboolean get_quote;
+
     commodity = gnc_commodity_edit_get_commodity
       (GNC_COMMODITY_EDIT (aw->security_edit));
     if (commodity &&
         !gnc_commodity_equiv (commodity, xaccAccountGetSecurity(account)))
       xaccAccountSetSecurity (account, commodity);
 
-    if ((STOCK == aw->type) || (MUTUAL == aw->type))
+    get_quote = gtk_toggle_button_get_active
+      (GTK_TOGGLE_BUTTON (aw->get_quote_check));
+
+    if (!get_quote)
+    {
+      if (xaccAccountGetPriceSrc (account))
+        xaccAccountSetPriceSrc (account, NULL);
+    }
+    else if (CURRENCY == aw->type)
+    {
+      gint code;
+
+      old_string = xaccAccountGetPriceSrc (account);
+      if (safe_strcmp ("CURRENCY", old_string) != 0)
+        xaccAccountSetPriceSrc (account, "CURRENCY");
+
+      code = gnc_option_menu_get_active (aw->quote_tz_menu);
+      string = gnc_timezone_menu_position_to_string(code);
+      old_string = xaccAccountGetQuoteTZ (account);
+      if (safe_strcmp (string, old_string) != 0)
+        xaccAccountSetQuoteTZ (account, string);
+    }
+    else if ((STOCK == aw->type) || (MUTUAL == aw->type))
     {
       gint code;
 
@@ -1286,6 +1317,7 @@ gnc_type_list_select_cb(GtkCList * type_list, gint row, gint column,
                         GdkEventButton * event, gpointer data)
 {
   AccountWindow * aw = data;
+  gboolean get_quote;
   gboolean sensitive;
 
   if (aw == NULL)
@@ -1301,12 +1333,21 @@ gnc_type_list_select_cb(GtkCList * type_list, gint row, gint column,
 
   last_used_account_type = row;
 
+  get_quote = gtk_toggle_button_get_active
+    (GTK_TOGGLE_BUTTON (aw->get_quote_check));
+
   sensitive = (aw->type == STOCK    ||
 	       aw->type == MUTUAL   ||
 	       aw->type == CURRENCY);
 
   gtk_widget_set_sensitive(aw->security_edit, sensitive);
-  gtk_widget_set_sensitive(aw->quote_frame, sensitive);
+  gtk_widget_set_sensitive(aw->get_quote_check, sensitive);
+  gtk_widget_set_sensitive(aw->quote_tz_menu, sensitive && get_quote);
+
+  sensitive = (aw->type == STOCK    ||
+	       aw->type == MUTUAL);
+
+  gtk_widget_set_sensitive(aw->source_menu, sensitive && get_quote);
 
   sensitive = (aw->type != EQUITY &&
                aw->type != CURRENCY &&
@@ -1332,7 +1373,9 @@ gnc_type_list_unselect_cb(GtkCList * type_list, gint row, gint column,
   aw->type = BAD_TYPE;
 
   gtk_widget_set_sensitive(aw->security_edit, FALSE);
-  gtk_widget_set_sensitive(aw->quote_frame, FALSE);
+  gtk_widget_set_sensitive(aw->get_quote_check, FALSE);
+  gtk_widget_set_sensitive(aw->source_menu, FALSE);
+  gtk_widget_set_sensitive(aw->quote_tz_menu, FALSE);
 }
 
 
@@ -1492,6 +1535,27 @@ opening_equity_cb (GtkWidget *w, gpointer data)
   gtk_widget_set_sensitive (aw->transfer_account_frame, !use_equity);
 }
 
+static void
+get_quote_check_cb (GtkWidget *w, gpointer data)
+{
+  AccountWindow *aw = data;
+  gboolean get_quote;
+  gboolean sensitive;
+
+  get_quote = gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (w));
+
+  sensitive = (aw->type == STOCK    ||
+	       aw->type == MUTUAL   ||
+	       aw->type == CURRENCY);
+
+  gtk_widget_set_sensitive(aw->quote_tz_menu, sensitive && get_quote);
+
+  sensitive = (aw->type == STOCK    ||
+	       aw->type == MUTUAL);
+
+  gtk_widget_set_sensitive(aw->source_menu, sensitive && get_quote);
+}
+
 /********************************************************************\
  * gnc_account_window_create                                        *
  *   creates a window to create a new account.                      *
@@ -1554,6 +1618,10 @@ gnc_account_window_create(AccountWindow *aw)
   aw->security_edit = gnc_commodity_edit_new ();
   gtk_box_pack_start(GTK_BOX(box), aw->security_edit, TRUE, TRUE, 0);
 
+  aw->get_quote_check = gtk_object_get_data (awo, "get_quote_check");
+  gtk_signal_connect (GTK_OBJECT (aw->get_quote_check), "toggled",
+                      GTK_SIGNAL_FUNC (get_quote_check_cb), aw);
+
   box = gtk_object_get_data(awo, "source_box");
   aw->source_menu = gnc_ui_source_menu_create(aw_get_account (aw));
   gtk_box_pack_start(GTK_BOX(box), aw->source_menu, TRUE, TRUE, 0);
@@ -1561,8 +1629,6 @@ gnc_account_window_create(AccountWindow *aw)
   box = gtk_object_get_data(awo, "quote_tz_box");
   aw->quote_tz_menu = gnc_ui_quote_tz_menu_create(aw_get_account (aw));
   gtk_box_pack_start(GTK_BOX(box), aw->quote_tz_menu, TRUE, TRUE, 0);
-
-  aw->quote_frame = gtk_object_get_data (awo, "price_quote_frame");
 
   box = gtk_object_get_data(awo, "parent_scroll");
 
